--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3e%3crect x='4' y='14' width='4' height='6' rx='1' fill='%2338bdf8'/%3e%3crect x='10' y='9' width='4' height='11' rx='1' fill='%230ea5e9'/%3e%3crect x='16' y='4' width='4' height='16' rx='1' fill='%230284c7'/%3e%3c/svg%3e" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sales Target Monitor</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+      /* Force remove any rogue background pseudo-elements that might be causing the logo issue. */
+      body::before, body::after, #root::before, #root::after {
+        content: none !important;
+        background-image: none !important;
+        display: none !important;
+      }
+    </style>
     <script>
       tailwind.config = {
         theme: {
